[tool.poetry]
name = "nonebot_plugin_caiyunai"
version = "0.2.4"
description = "适用于 Nonebot2 的彩云小梦AI续写插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-caiyunai"
repository = "https://github.com/noneplugin/nonebot-plugin-caiyunai"

[tool.poetry.dependencies]
python = "^3.7.3"
httpx = ">=0.19.0"
nonebot2 = "^2.0.0-beta.4"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-imageutils = "^0.1.6"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
